kubernetes/qsb/apps/downloads/lidarr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: lidarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: freyrarr
        - matchLabels:
            app.kubernetes.io/name: plex-meta-manager
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: '8686'
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: '32400'
              protocol: TCP

    # prowlarr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: '9696'
              protocol: TCP

    # qbittorrent
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

    # sabnzbd
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP
